fix(front): invisible tiles

--- a/frontend/src/pages/Photography/styles.css
+++ b/frontend/src/pages/Photography/styles.css
@@ -3,5 +3,5 @@
     justify-content: center;
     transition: height 500ms;
     height: 0;
-    overflow-y: hidden;
+    overflow-y: auto;
 }
